--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "puppet/modules/concat"]
 	path = puppet/modules/concat
 	url = https://github.com/ripienaar/puppet-concat.git
+[submodule "drupal"]
+	path = drupal
+	url = http://git.drupal.org/project/drupal.git
